tests/baselines/reference/jsdocRestParameter.errors.txt
/a.js(6,3): error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'number'.


==== /a.js (1 errors) ====
    /** @param {...number} a */
    function f(a) {
        // Ideally this would be a number. But currently checker.ts has only one `argumentsSymbol`.
        arguments[0];
    }
    f([1, 2]); // Error
      ~~~~~~
!!! error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'number'.
    f(1, "2"); // Error
    f(1, 2);
    